--- a/main.html
+++ b/main.html
@@ -8,7 +8,7 @@
 
 <body>
 	<!-- the entire body must be written by student -->
-	<table style="background-color: yellow;" border="1">
+	<table style="background-color: yellow; border: 1px solid black" >
     <thead>
         <tr>
             <th>NAME</th>
