--- a/main.html
+++ b/main.html
@@ -8,25 +8,25 @@
 
 <body>
 	<!-- the entire body must be written by student -->
-	<table style="background-color: yellow; border: 1px solid black" >
+	<table style="background-color: yellow; " >
     <thead>
-        <tr>
-            <th>NAME</th>
-            <th>AGE</th>
-            <th>BRANCH</th>
+        <tr class="color">
+            <th class="color">NAME</th>
+            <th class="color">AGE</th>
+            <th class="color">BRANCH</th>
         </tr>
     </thead>
     <tbody>
-        <tr>
-            <td>Shaw</td>
-            <td>20</td>
-            <td>CSE</td>
+        <tr class="color">
+            <td class="color">Shaw</td>
+            <td class="color">20</td>
+            <td class="color">CSE</td>
 
         </tr>
-        <tr>
-            <td>Adil</td>
-            <td>21</td>
-            <td>ECE</td>
+        <tr class="color">
+            <td class="color">Adil</td>
+            <td class="color">21</td>
+            <td class="color">ECE</td>
         </tr>
     </tbody>
    </table>
