--- a/main.html
+++ b/main.html
@@ -10,6 +10,7 @@
 	<!-- the entire body must be written by student -->
 	<table style="background-color: yellow; " >
     <thead>
+		<caption>Student Details</caption>
         <tr class="color">
             <th class="color">NAME</th>
             <th class="color">AGE</th>
