--- a/main.html
+++ b/main.html
@@ -8,7 +8,7 @@
 
 <body>
 	<!-- the entire body must be written by student -->
-	<table style="background-color: yellow; " >
+	<table style="background-color: yellow; " class="color" >
     <thead>
 		<caption>Student Details</caption>
         <tr class="color">
